Quorum/Library/Tests/TypeCheckerGenerated/Pass/RetAssignObjectBoolObjField.quorum
class Main
    Object v = Test()
    action Main
        Boolean var = cast(Boolean, v)
        if var:GetValue() = true
            output "passed"
        end
    end

    action Test() returns Object
        Boolean var
        var:SetValue(true)
        return var
    end
end