Quorum/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignNumberBoolObjField.quorum
class Main
    Boolean v
    action Main
        v:SetValue(true)
        Test(v)
    end

    action Test(number var)
    end
end
